# vpmn

./: .indent.pro  AUTHORS  COPYING  Makefile  Makefile.am  README.md  configure.ac  epsc_vpmn.tex  epsc_vpmn_all.tex  epsc_vpmn_annex.tex  packets.tex  paper.tex  report.tex  report_annex.tex  vpmn-packets.tex  vpmn.conf
annex/: descriptions.tex  papers.tex
chapters/: bibliography.bib  conclusions.tex  intro.tex  program.tex  state.tex  tests.tex
epsc/: dades.tex  end.tex  epsc_tfc_pfc.cls  init.tex  llegiu_me.txt  plantilla_tfc.tex  portades.tex
extra/: Makefile
images/: Makefile  dia-app.dia  dia-case.dia  dia-pktflow.dia  dia-tunsrv.dia  dia-udpsrv.dia  latency.gnu  vpn-centralized.dia  vpn-externalized.dia  vpn-fullymeshed.dia  vpn-lan.dia  vpn-meshed.dia
images/shapes/: pipe.shape
paper/: init.tex  paper_template.tex
presentation/: Makefile  epsc_vpmn_slides.tex  scg08_vpmn.tex
presentation/slides/: conclusions.tex  intro.tex  program.tex  state.tex  tests.tex
report/: a4.sty  annex.tex  bibliography.bib  chapters.tex  commands.tex  config.tex  rfc.bib  tesis.cls
src/: Makefile.am  config.c  config.h  debug.c  debug.h  peer.c  peer.h  protocol.c  protocol.h  router.c  router.h  srv.h  timeout.c  timeout.h  tundev.c  tundev.h  tundevthread.c  tundevthread.h  tunsrv.c  tunsrvthread.c  tunsrvthread.h  udpsrv.c  udpsrvdtls.c  udpsrvdtls.h  udpsrvsession.c  udpsrvsession.h  udpsrvthread.c  udpsrvthread.h  vpmnd.c
src/linux/: tundev.c
tag-scg08/images/: dia-app.dia  dia-tunsrv.dia  vpn-meshed.dia  vpn.dia
test/: Makefile.am  ping2dat.sh  protocoltest.c  ptptest.c  routertest.c  test.cfg  tundevtest.c  udpsrvsessiontest.c  udpsrvtest.c  x509certtest.c
